--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Films</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
   
   <template class="film-temp">
     <!-- fragment -->
-    <li class="js-item mb-3 col-12 col-sm-6 col-md-4 col-lg-3 text d-flex align-items-stretch">
+    <li class="js-item mb-3 col-12 col-sm-6 col-md-4 col-lg-3 text d-flex align-items-stretch" data-aos="zoom-in-right" data-aos-duration="1000">
       <div class="d-flex flex-column justify-content-between w-100 p-3 bg-success rounded-3 ">
         <h2 class="film-title text-center text-white mb-3"></h2>
         <div class="text-white">Year:   <span class="film-year text-dark mb-3 text-decoration-underline"></span></div>
@@ -28,7 +29,8 @@
     </li>
     <!-- fragment -->
   </template>
-  
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="./kinolar.js"></script>
   <script src="./main.js"></script>
 </body>
